--- a/src/app/cursos/cursos.component.html
+++ b/src/app/cursos/cursos.component.html
@@ -1,2 +1,10 @@
-<p>cursos Component!</p>
+<p>
+  Lista de Cursos do Portal {{nomePortal}}
+</p>
 <app-curso-detalhe></app-curso-detalhe>
+
+<ul>
+  <li *ngFor='let curso of cursos'>
+    {{curso}}
+  </li>
+</ul>
