--- a/src/app/data-binding/data-binding.component.html
+++ b/src/app/data-binding/data-binding.component.html
@@ -10,8 +10,7 @@
   </article>
 
   <article>
-    <h3>
-      Property Binding
-    </h3>
-  </article>
+    <h3> Property Binding </h3>
+    <img [src]= "urlImagem"/>
+    </article>
 </section>
